//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "TournamentStuff.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventTournamentProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message RetrieveTournamentRankingsRequestProto {
	optional MinimumUserProto sender = 1;
	optional int32 eventId = 2;
	optional int32 afterThisRank = 3;
}

message RetrieveTournamentRankingsResponseProto {
	optional MinimumUserProto sender = 1;
	optional RetrieveTournamentStatus status = 2;
	optional int32 eventId = 3;
	optional int32 afterThisRank = 4;
	optional MinimumUserProtoWithLevelForTournament retriever = 5;
	repeated MinimumUserProtoWithLevelForTournament resultPlayers = 6;
	repeated FullUserProto fullUsers = 7;
	
	enum RetrieveTournamentStatus {
		SUCCESS = 1;
		OTHER_FAIL = 2;
	}
}

//------------------------------------------------------------------------------------------
